--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <script lang="js" src="movies.js"></script>
     <link href="./css/style.css" type="text/css" rel="stylesheet">
     <title>Import Local JSON Data | Zipcode Wilmington</title>
 </head>
@@ -37,6 +38,7 @@
     <section>
     	<h1>Movie Information</h1>
     	<div id="result"></div>
+        <script src="movies.js"></script>
     </section>
 </body>
 </html>
